migrations/k8s/02-external-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-pg
  namespace: migrations-demo
spec:
  type: ExternalName
  externalName: host.rancher-desktop.internal
  ports:
    - name: postgres
      port: 55432
